--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
     # preDeployCommand: "bundle exec rails db:migrate" # preDeployCommand only available on paid instance types
     startCommand: "bundle exec rails server"
     envVars:
-      - key: postgresql://music_band_search_user:6AApoqEB5cMBRVcZ5tErLMhuuKyfLqTj@dpg-csq60ht2ng1s739aedvg-a/music_band_search
+      - key: DATABASE_URL
         fromDatabase:
           name: music_band_search
           property: connectionString
